# opam-repo-ci

./: opam-ci-check.opam
lib/: build.ml  cluster_build.ml  local_build.ml
opam-ci-check/cache/: cache_dir.ml  cache_dir.mli  dune
opam-ci-check/lib/: dune  lint.ml  opam_ci_check.ml  test.ml  test.mli
opam-ci-check/test/: lint.t
test/: test.ml
